# cardapio_kivy

./: Pipfile  app.kv  asteroids_from_week.txt  buildozer.spec  buildozer_.spec  data_asteroid.json  help.md  main.kv  main.py  main_.py  pyproject.toml  user.py  user_key.json
data/: .config.json  asteroids_from_week.txt  data_asteroid.json  hino_nacional.txt  nasa_api.py  new_features_py_3.10.txt
keys/: fire_key.json
lib/: component_java.py
