[tool.poetry]
name = "cardapio"
version = "0.1.0"
description = "a app for the show the food from day in the ifsertaope"
authors = ["reinanbr <perseu912@gmail.com>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = "^3.10"
Kivy = "^2.1.0"
kivymd = "^1.0.2"
Cython = "^0.29.32"
kivmob = "^2.0"
buildozer = "^1.4.0"
firebase-admin = "^5.3.0"
asynckivy = "^0.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
